Agregado Titulos y Datos Personales

--- a/index.html
+++ b/index.html
@@ -3,10 +3,8 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, user-scalable:no">
-		<title> </title>
-	</head>
-	<body>
-		<svg width="640" height="480" xmlns="http://www.w3.org/2000/svg" xmlns:svg="http://www.w3.org/2000/svg">
+		<title>Curriculum Vitae Pablo Meta</title>
+		<svg width="300" height="90" xmlns="http://www.w3.org/2000/svg" xmlns:svg="http://www.w3.org/2000/svg">
 		 <g>
 			<title>Layer 1</title>
 			<path fill="#00007f" stroke-width="0" stroke-dasharray="null" stroke-linejoin="null" stroke-linecap="null" d="m58.367294,60.000008l-13.867294,-28.816714l9.132707,0l13.867294,28.816714l-13.867294,28.816691l-9.132707,0l13.867294,-28.816691z" id="svg_10" transform="rotate(-180 56.00000000000001,59.99999237060547) " stroke="#000000"/>
@@ -16,5 +14,13 @@
 			<path fill="#00007f" stroke-width="0" stroke-dasharray="null" stroke-linejoin="null" stroke-linecap="null" d="m277.367294,60.000015l-13.867294,-28.816714l9.132708,0l13.867293,28.816714l-13.867293,28.816691l-9.132708,0l13.867294,-28.816691z" transform="rotate(-1.123302698135376 275.00000000000057,59.99999999999954) " stroke="#000000" id="svg_14"/>
 		 </g>
 		</svg>
+	</head>
+	<body>
+		<header>
+			<h1>Resumen Curricular</h1>
+			<h2>Pablo Esteban Meta</h2>
+			<h3>Argentino</h3>
+			<h3>Fecha de Nacimiento: 19/12/1972</h3>
+		</header>
 	</body>
 </html>
