Con Etiquetas de Navegación

--- a/index.html
+++ b/index.html
@@ -22,5 +22,12 @@
 			<h3>Argentino</h3>
 			<h3>Fecha de Nacimiento: 19/12/1972</h3>
 		</header>
+		<nav>
+			<a href="index.html">Inicio</a>
+			|
+			<a href="educacion.html">Educación</a>
+			|
+			<a href="experiencia.html">Experiencia</a>
+		</nav>
 	</body>
 </html>
