Agregado de listas de idiomas

--- a/index.html
+++ b/index.html
@@ -29,5 +29,25 @@
 			|
 			<a href="experiencia.html">Experiencia</a>
 		</nav>
+		<section>
+			<h2>Información Personal</h2>
+			<img src="images/foto_de_perfil.jpg" alt="Foto de Perfil" title="Foto de Perfil">
+			<p>Soy <strong>Analista Contable</strong> con experiencia en aspectos financieros y legales.</p>
+			<p>Desde hace mas de veinte años, me desempeño en las áreas de administración y finanzas de empresas el <strong>rubro agropecuario.</strong></p>
+			<p>Adicionalmente, me encargo de la implementación y capacitación en <em>software de gestión</em></p>
+			<ul><strong>Idiomas:</strong>
+				<br><br>
+				<li><em>Español</em></li>
+					<ul>Nivel:
+						<li>Oral: Nativo</li>
+						<li>Escrito: Nativo</li>
+					</ul>
+				<li><em>Ingles</em></li>
+					<ul>Nivel:
+						<li>Oral: Bajo</li>
+						<li>Escrito: Intermedio</li>
+					</ul>
+			</ul>
+		</section>
 	</body>
 </html>
