Con pie de página con informacion de contacto

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 			<img src="images/foto_de_perfil.jpg" alt="Foto de Perfil" title="Foto de Perfil">
 			<p>Soy <strong>Analista Contable</strong> con experiencia en aspectos financieros y legales.</p>
 			<p>Desde hace mas de veinte años, me desempeño en las áreas de administración y finanzas de empresas el <strong>rubro agropecuario.</strong></p>
-			<p>Adicionalmente, me encargo de la implementación y capacitación en <em>software de gestión</em></p>
+			<p>Adicionalmente, me encargo de la implementación y capacitación en <em>software de gestión.</em></p>
 			<ul><strong>Idiomas:</strong>
 				<br><br>
 				<li><em>Español</em></li>
@@ -50,4 +50,9 @@
 			</ul>
 		</section>
 	</body>
+	<foot>
+		<p>Contacto:
+			<a href="mailto:pablometa@gmail.com">pablometa@gmail.com</a>
+		</p>
+	</foot>
 </html>
