Agregado de Tabla con Educación

--- a/educacion.html
+++ b/educacion.html
@@ -29,6 +29,34 @@
 			|
 			<a href="experiencia.html">Experiencia</a>
 		</nav>
+		<section>
+			<title>Tabla Educación</title>
+				<table border="1" cellpadding="10" cellspacing="0">
+					<h2>Educación</h2>
+					<thead>
+						<tr>
+							<th>Año</th>
+							<th>Institución</th>
+							<th>Lugar</th>
+							<th>Culmino?</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr>
+							<td>1990</td>
+							<td>Inst. Marian Moreno</td>
+							<td>Hurlingham - Bs.As.</td>
+							<td>SI</td>
+						</tr>
+						<tr>
+							<td>2009</td>
+							<td>Universidad de Morón</td>
+							<td>Morón - Bs.As.</td>
+							<td>NO</td>
+						</tr>
+					</tbody>
+			</table>
+		</section>
   </body>
   <foot>
     <p>Contacto:
