agregado de formulario de estudios

--- a/educacion.html
+++ b/educacion.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, user-scalable:no">
-		<title>Curriculum Vitae Pablo Meta</title>
+		<title>CV Educación</title>
 		<svg width="300" height="90" xmlns="http://www.w3.org/2000/svg" xmlns:svg="http://www.w3.org/2000/svg">
 		 <g>
 			<title>Layer 1</title>
@@ -56,6 +56,27 @@
 						</tr>
 					</tbody>
 			</table>
+			<form autocomplete="on">
+				<h2>Agragar Estudios</h2>
+				<fieldset>
+					<label for="año"><strong>Año: </strong></label>
+					<input id="edad" type="number" min="1900" required>
+					<br>
+					<label for="institucion"><strong>Institución: </strong></label>
+					<input id="institucion" type="text" maxlength="50" required>
+					<br>
+					<label for="lugar"><strong>Lugar: </strong></label>
+					<textarea id="lugar" type="text" rows="2" cols="10" maxlength="200"></textarea>
+					<br>
+					<label for="culmino"><strong>Culminó? </strong></label>
+					<input id="culmino" type="radio" value="SI" required>SI
+					<input id="culmino "type="radio" value="NO" required>NO
+					<br><br>
+					<label for="enviar"></label>
+					<input id="enviar" type="submit" value="enviar" name="registrar">
+					<input type="reset" value="Limpiar Formulario">
+					<br>
+				</fieldset>
 		</section>
   </body>
   <foot>
