Agregado de archivos de audio y video, ajuste página educación.html y finalizacion pagina experiencia.html

--- a/educacion.html
+++ b/educacion.html
@@ -73,7 +73,7 @@
 					<input id="culmino "type="radio" value="NO" required>NO
 					<br><br>
 					<label for="enviar"></label>
-					<input id="enviar" type="submit" value="enviar" name="registrar">
+					<input id="enviar" type="submit" value="Enviar" name="registrar">
 					<input type="reset" value="Limpiar Formulario">
 					<br>
 				</fieldset>
