--- a/experiencia.html
+++ b/experiencia.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, user-scalable:no">
-		<title>Curriculum Vitae Pablo Meta</title>
+		<title>CV Experiencia</title>
 		<svg width="300" height="90" xmlns="http://www.w3.org/2000/svg" xmlns:svg="http://www.w3.org/2000/svg">
 		 <g>
 			<title>Layer 1</title>
@@ -29,6 +29,17 @@
 			|
 			<a href="experiencia.html">Experiencia</a>
 		</nav>
+		<section>
+			<h2>Experiencia</h2>
+			<h3>Video: Intereses Profesionales</h3>
+			<video controls autoplay preload="auto" width="640" height="480">
+				<source src="video\video.mp4" type="video/mp4">
+			</video>
+			<br>
+			<h3>Audio: Hobbies</h3>
+			<audio src="audio\audio.aac" controls preload="auto">Audio</audio>
+			<br>
+		</section>
   </body>
   <foot>
     <p>Contacto:
